--- a/assets/css/portfolio.css
+++ b/assets/css/portfolio.css
@@ -34,6 +34,15 @@ body{
   .header{
    text-shadow: goldenrod -8px 7px 3px;
   }
+
+  .github{
+    font-weight: bolder;
+  }
+
+  .linkedIn{
+    margin-left: 10px;
+    font-weight: bolder;
+  }
   
   .copywrite{
     font-size: 20px;
