--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -26,8 +26,13 @@ body{
   }
 
   .linkedIn{
-    margin-left: 10px;
     font-weight: bolder;
+    margin-left: 10px;
+  }
+
+  .myResume{
+    font-weight: bolder;
+    margin-left: 10px;
   }
   
   .card-text{
